html4 html5 html3

--- a/article.html
+++ b/article.html
@@ -12,7 +12,7 @@
       }
     </style> -->
     <!--external CSS-->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="# styles.css" />
 </head>
 <!--Inline - styles
 body style="background-color: red"></body>-->
